# vscode-cheatsheet

./: README.md  pyproject.toml
vscode_cheatsheet/: main.py  utils.py
